# draftsmith_axum_web-app

./: .gitignore  Cargo.toml  justfile  package-lock.json  package.json  tailwind.config.js
src/: flash.rs  html_builder.rs  main.rs  server.rs  state.rs  static_files.rs  template_context.rs  templates.rs
src/routes/: assets.rs  delete.rs  mod.rs  recent.rs  search.rs
src/routes/notes/: create.rs  delete.rs  edit.rs  mod.rs  note_move.rs  tags.rs  view.rs
src/routes/tags/: create.rs  delete.rs  list.rs  manage_all_tags.rs  mod.rs  notes.rs  update.rs
static/css/: notes-dnd.css  tailwind.css  tree.css
static/js/: keyboard-shortcuts.js
static/js/controllers/: keybinding_controller.js  tag_tree_controller.js  tree_controller.js
templates/: base.html  body.html  csrf_token.html  delme_sidebar_content.html  flash.html  head.html  index.html  katex_js.html  navbar.html  note_detail.html  right_navbar_button.html  search_bar.html  tag_drawer.html  tag_icon.html  temp_tag_content.html  theme_controller.html  theme_icon.html
templates/action_buttons/: action_buttons.html  base.html  edit.html  read.html
templates/body/: assets.html  base.html  note_tree.html  pagination.html  recent.html  search_results.html  upload_asset.html
templates/body/components/: assets_table.html  notes_table.html
templates/body/note/: assign_tags.html  base.html  edit.html  footer.html  move.html  read.html
templates/body/tags/: list.html  manage_all.html
templates/breadcrumbs/: base.html  breadcrumbs.html
templates/extras/asciinema/: asciinema.html
templates/extras/datatables/: datatables.html
templates/icons/: actions.html  menu.html
templates/katex/: katex_css.html
templates/navbar/: base.html  right_navbar_button.html
