[package]
name = "draftsmith_axum_web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
clap = { version = "4.5.21", features = ["derive"] }
include_dir = { version = "0.7.4", features = ["glob"] }
lazy_static = "1.5.0"
mime_guess = "2.0.5"
minijinja = { version = "2.5.0", features = ["loader"] }
once_cell = "1.20.2"
templates = "0.10.0"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
draftsmith_rs_api = { path = "../draftsmith_rs_api" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
