[package]
name = "draftsmith_axum_web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
clap = { version = "4.5.21", features = ["derive"] }
include_dir = { version = "0.7.4", features = ["glob"] }
tower-http = { version = "0.5", features = ["compression-gzip", "compression-br", "fs"] }
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
lazy_static = "1.5.0"
mime_guess = "2.0.5"
minijinja = { version = "2.5.0", features = ["loader"] }
once_cell = "1.20.2"
templates = "0.10.0"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
draftsmith_rest_api = { path = "../draftsmith_rs_api" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
axum-extra = { version = "0.9.6", features = ["cookie"] }
async-session = "3.0.0"
tower-sessions = "0.13.0"
html-escape = "0.2.13"
sha2 = "0.10.8"
base64 = "0.22.1"
reqwest = { version = "0.12.9", features = ["json", "multipart"] }
chrono = "0.4.38"
tempfile = "3.14.0"
